--- a/assets/css/shared.css
+++ b/assets/css/shared.css
@@ -7,18 +7,13 @@ h1 {
 }
 
 h2 {
-    font-size:30px;
     color:white;
 }
 
-h3 {
-    font-size: 60px;
-}
 
 h4 {
     font-family:'Helvetica Light';
     font-weight: normal;
-    font-size: 40px;
 }
 
 .receive-btn-container h3, h4, p {
@@ -31,7 +26,7 @@ h4 {
     border: none;
     text-align: left;
     width: 100%;
-    padding: 3% 5%;
+    padding: 3% 0%;
     outline: none;
     margin-top: 2%;
 }
@@ -42,11 +37,28 @@ h4 {
     color: rgb(209, 74, 40);
     float: right;
     padding-top: 2%;
+    padding-right: 3%;
     margin-right: 5px;
 }
 
 .active:after {
     content: "-  CLOSE WINDOW";
+    padding-right: 3%;
+}
+
+.collapse-grid {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.col:first-child {
+    border-right: 5px solid rgb(209, 74, 40);
+    border-bottom: none;
+}
+.col {
+    width: 50%;
+    align-content: center;
+    text-align: center;
 }
 
 .page-container {
@@ -59,4 +71,19 @@ h4 {
 
 .sidenav a:hover {
     color: rgb(219, 104, 9);
+}
+
+@media (max-width: 400px) {
+    .collapse-grid {
+        margin-left: 25%;
+        display: block;
+    }
+    .col {
+        margin: 5%;
+    }
+    .col:first-child {
+        padding-bottom: 3%;
+        border-right: none;
+        border-bottom: 3px solid rgb(209, 74, 40);
+    }
 }
