--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,10 +1,29 @@
+@import "colors.css";
+
+html {
+    background-color: #444444;
+}
 h1, h2, h3, h4, p {
-    color: black;
+    color: white;
     width: 100%;
     padding: 0%;
 }
 
+h1 {
+    margin-top: 0px;
+}
+
+h2 {
+    margin: 1%;
+    margin-bottom: 0px;
+}
+
+a {
+    text-decoration: none;
+}
+
 p {
+    font-size: 25px;
     margin-bottom: 0%;
 }
 
@@ -19,7 +38,7 @@ p {
 }
 
 .link-box {
-    background-color: rgb(230, 83, 25);
+    background-color: var(--give-bg-color);
     width: 100%;
     height: auto;
 }
@@ -39,65 +58,20 @@ div.desc {
     width: 30%;
 }
 
-.link-group {
-    display:block;
+.box-container h3, h4, p {
+    color: #444444;
     width: 100%;
+    height: auto;
 }
 
-.button {
-    display: inline-block;
-    border-radius: 4px;
+.box {
     background-color: white;
-    border: 2px solid black;
-    color: black;
-    text-align: center;
-    font-size: 30px;
-    padding: 2% 2%;
-    width: 250px;
-    max-width: 40%;
-    transition: all 0.5s;
     cursor: pointer;
-    margin-bottom: 10%;
-  }
-  
-  .button span {
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    transition: 0.5s;
-  }
-  
-  .button span:after {
-    content: '\00bb';
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -20px;
-    transition: 0.5s;
-  }
-  
-  .button:hover span {
-    padding-right: 25px;
-  }
-  
-  .button:hover span:after {
-    opacity: 1;
-    right: 0;
-  }
-
-  .center-btn {
-      display: flex;
-      justify-content: center;
-  }
-
-  .email:link {
-      text-decoration: none;
-      color: rgb(25, 148, 230);
-  }
-
-  .email:hover {
-      text-decoration: none;
-      color:rgb(20, 99, 145);
-  }
-
+    border: none;
+    text-align: left;
+    width: 100%;
+    padding: 3% 5%;
+    outline: none;
+    margin-top: 2%;
+}
 
