--- a/assets/css/receive.css
+++ b/assets/css/receive.css
@@ -1,9 +1,11 @@
+@import "colors.css";
+
 .receivecrithtml {
-    background-color: rgb(25, 148, 230);
+    background-color: var(--receive-bg-color);
 }
 
 .receive-btn-container h3, h4, p {
-    color: rgb(20, 99, 145);
+    color: var(--receive-text-color);
 }
 
 .collapsible {
@@ -20,7 +22,7 @@
 .collapsible:after {
     content: '+  READ MORE';
     font-size: 15px;
-    color: rgb(20, 99, 145);
+    color: var(--receive-text-color);
     float: right;
     padding-top: 2%;
     margin-right: 5px;
@@ -31,13 +33,13 @@
 }
 
 .page-container {
-    background-color: rgb(25, 148, 230);
+    background-color: var(--receive-bg-color);
 }
 
 .sidenav .close-btn {
-    color: rgb(25, 148, 230);
+    color: var(--receive-bg-color);
 }
 
 .sidenav a:hover {
-    color: rgb(25, 148, 230);
-}
+    color: var(--receive-bg-color);
+};
