--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -207,6 +207,7 @@ p {
 
 @media only screen and (max-width: 768px) {
     .page-container {
+        margin-top: 12%;
         padding-left: 5%;
         padding-right: 5%;
     }
@@ -237,12 +238,15 @@ p {
     }
 
     .navbar a {
-        padding: 1%;
+        padding: 2%;
         font-size:20px;
     }
 }
 
 @media only screen and (max-width: 400px) {
+    .page-container {
+        margin-top: 15%;
+    }
     h1 {
         font-size: 50px;
     }
