--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -147,24 +147,26 @@ p {
     font-family: 'Helvetica Bold';
     font-size:30px;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .navbar a:hover {
     color: #5c5757;
 }
 
-.menu-btn {
-    display: flex;
-    font-size: 30px;
-    font-family: 'Helvetica Bold';
-    font-weight: normal;
+.navbar span {
+    float: right;
+    display: block;
     color: black;
-    position: fixed;
-    right: 0;
-    top: 0;
-    margin-top: 1%;
-    margin-right: 2%;
+    text-align: right;
+    padding: 1%;
+    font-family: 'Helvetica Bold';
+    font-size: 30px;
     cursor: pointer;
+}
+
+.navbar span:hover {
+    color: #5c5757;
 }
 
 .email:link {
@@ -201,7 +203,7 @@ p {
     }
     
     p {
-        font-size: 25px;
+        font-size: 20px;
     }
 }
 
@@ -227,6 +229,10 @@ p {
         font-size: 20px;
     }
 
+    p {
+        font-size: 18px;
+    }
+
     .menu-btn {
         margin-top:1%;
         padding-top:0%;
@@ -238,6 +244,11 @@ p {
     }
 
     .navbar a {
+        padding: 2%;
+        font-size:20px;
+    }
+
+    .navbar span {
         padding: 2%;
         font-size:20px;
     }
@@ -273,6 +284,11 @@ p {
     .sidenav a {
         font-size: 12px;
         padding-bottom: 3%;
+    }
+
+    .navbar a {
+        padding: 3%;
+        font-size:15px;
     }
 
     .navbar a {
