--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -134,6 +134,8 @@ p {
     position: fixed;
     top: 0;
     left:0;
+    padding-left: 2%;
+    padding-right: 2%;
     width: 100%;
     border-bottom: 4px solid black;
 }
@@ -180,7 +182,7 @@ p {
 }
 
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1100px) {
     .page-container {
         padding-left: 10%;
         padding-right: 10%;
