fixed some stuff

--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -226,3 +226,10 @@ button:focus {
     text-decoration: none;
   }
 }
+
+.footer {
+  margin-top: 130px !important;
+}
+.card-link {
+  font-size: 1.25rem;
+}
