--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -2,14 +2,14 @@
     font-family: 'Helvetica Light';
     font-style: normal;
     font-weight: normal;
-    src: local('Helvetica Neue Light'), url('HelveticaNeueLight.woff') format('woff');
+    src: local('Helvetica Neue Light'), url('../fonts/HelveticaNeueLight.woff') format('woff');
 }
 
 @font-face {
     font-family: 'Helvetica Bold';
     font-style: normal;
     font-weight: normal;
-    src: local('Helvetica Neue Bold'), url('HelveticaNeueBold.woff') format('woff');
+    src: local('Helvetica Neue Bold'), url('../fonts/HelveticaNeueBold.woff') format('woff');
 }
 
 h1, h2, h3, h4, a {
