--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -231,10 +231,10 @@ p {
         font-size: 18px;
     }
 
-    .navbar a {
-        padding: 2%;
-        font-size:20px;
-    }
+    // .navbar a {
+    //     padding: 2%;
+    //     font-size:20px;
+    // }
 
     .navbar span {
         padding: 2%;
